# bavourai

./: .gitignore  README.md  customer_reviews.csv  duck_db.py  frontend.py  pyproject.toml  setup.py
bavourai/: client.py
bavourai/databases/: vector_stores.py
bavourai/embeddings/: embeddings.py
